--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "2.11.0"
+    "co": "4.6.0",
+    "commander": "2.11.0",
+    "fs": "0.0.1-security",
+    "shelljs": "0.7.8"
   }
 }
